--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- <p>Carregando... Aguarde</p> -->
         <img src="img/loading.gif"/>
     </div>
-    <iframe src="map_iframe.html" scrolling="no" seamless="seamless" class="mapa" onload="isLoaded()" >
+    <iframe src="iframe/index.html" scrolling="no" seamless="seamless" class="mapa" onload="isLoaded()" >
 
     </iframe> 
 </body>
